kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-go-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: portfolio-go-app.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-go-app
            port:
              number: 80
